--- a/Paper/latex/main.tex
+++ b/Paper/latex/main.tex
@@ -9,6 +9,7 @@
 \usepackage{balance}  % for  \balance command ON LAST PAGE  (only there!)
 \usepackage[utf8x]{inputenc}
 \usepackage[colorinlistoftodos]{todonotes}
+\usepackage{adjustbox}
 
 % Include information below and uncomment for camera ready
 \vldbTitle{Twitter data serialization methods and benchmarks}
