--- a/Paper/latex/main.tex
+++ b/Paper/latex/main.tex
@@ -10,6 +10,9 @@
 \usepackage[utf8x]{inputenc}
 \usepackage[colorinlistoftodos]{todonotes}
 \usepackage{adjustbox}
+\usepackage{hyperref}
+\usepackage{microtype}
+
 
 % Include information below and uncomment for camera ready
 \vldbTitle{Twitter data serialization methods and benchmarks}
@@ -111,11 +114,12 @@
 
 \input{Abstract}
 \input{Introduction}
-\input{DataOverview}
-\input{References}
+\input{Experiment_Overview}
+\input{Experiment}
 
 
 
-
+\bibliographystyle{abbrv}
+\bibliography{References} 
 
 \end{document}
