add new experiments and minor change in java io time.

--- a/Paper/latex/EXP_Read_IO_LocalDisk.tex
+++ b/Paper/latex/EXP_Read_IO_LocalDisk.tex
@@ -14,7 +14,7 @@ we allowed to concurrently read and then process different ranges of the require
 \subsubsection{Results}
 \begin{figure}
 	\centering
-	\includegraphics[scale=1]{img/Experiment_ReadObjects_CPU.pdf}
+	\includegraphics[width=\columnwidth,height=4.5cm,keepaspectratio]{img/Experiment_ReadObjects_CPU.pdf}
 	\caption{sequential and random read}
 	\label{fig:sequental_random_read}
 \end{figure}
