add data division on the project.

--- a/Paper/latex/Experiment_Overview.tex
+++ b/Paper/latex/Experiment_Overview.tex
@@ -48,6 +48,24 @@ The ten different complex object implementations that we considered have very di
 
 \begin{table}
 	\centering
+	\caption{tweet complexity }
+	\label{tbl:object_size}
+	\begin{adjustbox}{width=\columnwidth,center}	
+		
+		\begin{tabular}{|c|c|} \hline
+			Tweet type & Frequency\\ \hline
+			Simple tweets(retweet \& quote are null ) & 332,901\\ \hline
+			Retweets & 489,562\\ \hline
+			Quote & 68,582\\ \hline
+			Retweet \& Quote & 108,955\\ \hline
+			Total & 1,000,000 \\ \hline
+			
+			\hline\end{tabular}
+	\end{adjustbox}
+\end{table}
+
+\begin{table}
+	\centering
 	\caption{Comparison of object size for 1 million tweet }
 	\label{tbl:object_size}
 	\begin{adjustbox}{width=\columnwidth,center}	
