update latex files

--- a/Paper/latex/Experiment_Overview.tex
+++ b/Paper/latex/Experiment_Overview.tex
@@ -73,7 +73,7 @@ The ten different complex object implementations that we considered have very di
 		\begin{tabular}{|l|c|c|} \hline
 		 \textbf{Serialization Methods} & \textbf{Serialized file size(gigabyte)}\\ \hline
 			Java Default  & 4.6 \\ \hline	
-			Java JSON  & 4.3 \\ \hline	
+			Java JSON Gzip  & 4.3 \\ \hline	
 			Java BSON  & 4.6 \\ \hline	
 			Java Protocol Buffer  & 1.9 \\ \hline	
 			Java Kyro  & 1.9 \\ \hline	
@@ -81,7 +81,8 @@ The ten different complex object implementations that we considered have very di
 			C++ Hand Coded  & 2.1 \\ \hline	
 			C++ InPlace  & 3.2 \\ \hline	
 			C++ Boost  & 2.2 \\ \hline	
-			C++ Protocol Buffer  & 1.9 \\ \hline					
+			C++ Protocol Buffer  & 1.9 \\ \hline
+			C++ BSON  & 4.6 \\ \hline					
 			\hline\end{tabular}
 	\end{adjustbox}
 \end{table}
