--- a/Paper/latex/EXP_Memory.tex
+++ b/Paper/latex/EXP_Memory.tex
@@ -3,6 +3,6 @@
 \begin{figure}
 	\centering
 	\includegraphics[width=\columnwidth,height=2.5in,keepaspectratio]{../../RScripts/Experiment_ReadObjects_Memory.pdf}
-	\caption{Serialize Objects for 5M Tweets}
+	\caption{memory used in read objects for 4M Tweets}
 	\label{fig:exp_memory}
 \end{figure}
