--- a/Paper/latex/EXP_Read_IO_LocalDisk.tex
+++ b/Paper/latex/EXP_Read_IO_LocalDisk.tex
@@ -18,7 +18,7 @@ Before the experiment, the operating system buffer cache is emptied. We do not u
 	\centering
 	\includegraphics[width=\columnwidth,height=3.5in,keepaspectratio]{../../RScripts/Experiment_Seq_Read_CPU_IO_Bar.pdf}
 	\caption{CPU and IO details of sequential read for 4M tweets}
-	\label{fig:seq_read}
+	\label{fig:seq_read_detail}
 \end{figure}
 
 \begin{figure}
@@ -32,7 +32,7 @@ Before the experiment, the operating system buffer cache is emptied. We do not u
 	\centering
 	\includegraphics[width=\columnwidth,height=3.5in,keepaspectratio]{../../RScripts/Experiment_Rand_Read_CPU_IO_Bar.pdf}
 	\caption{CPU and IO details of random read for 4M tweets}
-	\label{fig:seq_read}
+	\label{fig:rand_read_detail}
 \end{figure}
 
 \subsubsection{Discussion}
