add tweeter object schema to the Latex

--- a/Paper/latex/EXP_Serialize.tex
+++ b/Paper/latex/EXP_Serialize.tex
@@ -1,6 +1,15 @@
 \subsection{Serialize RAW Data to Local Disk}
 
-The first step of experiments are serialize various complex objects and the write into a file in disk. In this experiment, the raw tweet data set read line-by-line and convert to a objects. The serialization tasks for each of the thirteen implementation method run. In the serialization process each object serialized or copy the final serialization result into $256KB$ pages and the objects indexed in separate file. 
+The first step of experiments are serialize various complex objects and the write into a file in disk. In this experiment, the raw tweet data set read line-by-line and convert to a objects. The serialization tasks for each of the thirteen implementation method run. In the serialization process each object serialized or copy the final serialization result into $256KB$ pages and the objects indexed in separate file.
+
+%\begin{figure}[t]
+%	\centering
+%	\resizebox{\columnwidth}{1.5in}{
+%		\input{img/serialize_process}
+%	}
+%	\caption{serialize process}
+%	\label{fig:serialize_process}
+%\end{figure} 
 
 \begin{figure}
 	\centering
