add rust diagrams

--- a/Paper/latex/EXP_Serialize.tex
+++ b/Paper/latex/EXP_Serialize.tex
@@ -23,11 +23,11 @@ The first step of experiments are serialize various complex objects and the writ
 In Figure \ref{fig:exp_serialization_bar}, we show, for each of the thirteen implementations, for both $taskset$ TRUE and FALSE the total running time required as a function of the number of Tweet objects write experiments. In the figure where the
 performance differences are easier to see; we also breakdown
 the total time into I/O and CPU.
-\begin{figure}
+\begin{figure*}
 	\centering
-	\includegraphics[width=\columnwidth,height=2.5in,keepaspectratio]{../../RScripts/Experiment_SerializeObjects_Bar.pdf}
+	\includegraphics[width=\linewidth ,height=2.5in,keepaspectratio]{../../RScripts/Experiment_SerializeObjects_Bar.pdf}
 	\caption{Serialize Objects for 5M Tweets}
 	\label{fig:exp_serialization_bar}
-\end{figure}
+\end{figure*}
 
 \subsubsection{Discussion}
