--- a/Paper/latex/EXP_Read_IO_LocalDisk.tex
+++ b/Paper/latex/EXP_Read_IO_LocalDisk.tex
@@ -15,12 +15,12 @@ Before the experiment, the operating system buffer cache is emptied. We do not u
 	\caption{sequential read}
 	\label{fig:seq_read}
 \end{figure}
-\begin{figure}
+\begin{figure*}
 	\centering
-	\includegraphics[width=\columnwidth,height=3in,keepaspectratio]{../../RScripts/Experiment_Seq_Read_CPU_IO_Bar.pdf}
+	\includegraphics[width=\linewidth,height=3in,keepaspectratio]{../../RScripts/Experiment_Seq_Read_CPU_IO_Bar.pdf}
 	\caption{CPU and IO details of sequential read for 4M tweets}
 	\label{fig:seq_read_detail}
-\end{figure}
+\end{figure*}
 
 \begin{figure}
 	\centering
@@ -29,11 +29,11 @@ Before the experiment, the operating system buffer cache is emptied. We do not u
 	\label{fig:rand_read}
 \end{figure}
 
-\begin{figure}
+\begin{figure*}
 	\centering
-	\includegraphics[width=\columnwidth,height=3in,keepaspectratio]{../../RScripts/Experiment_Rand_Read_CPU_IO_Bar.pdf}
+	\includegraphics[width=\linewidth,height=3in,keepaspectratio]{../../RScripts/Experiment_Rand_Read_CPU_IO_Bar.pdf}
 	\caption{CPU and IO details of random read for 4M tweets}
 	\label{fig:rand_read_detail}
-\end{figure}
+\end{figure*}
 
 \subsubsection{Discussion}
