--- a/Paper/latex/Experiment_Overview.tex
+++ b/Paper/latex/Experiment_Overview.tex
@@ -98,7 +98,7 @@ The ten different complex object implementations that we considered have very di
 			Rust Bincode  & 2.4 \\ \hline			
 			Rust MessagePack  & 1.9 \\ \hline			
 			Rust Bson  & 4.5 \\ \hline			
-			Rust FlexBuffers  & 4.3 \\ \hline						
+			Rust FlexBuffers  & 4.3 \\ 						
 			\hline\end{tabular}
 	\end{adjustbox}
 \end{table}
@@ -132,7 +132,7 @@ The ten different complex object implementations that we considered have very di
 			Rust Bincode  & 1 & 1\\ \hline			
 			Rust MessagePack  & 1 & 1\\ \hline			
 			Rust Bson  & 1 & 1\\ \hline			
-			Rust FlexBuffers  & 1 & 1\\ \hline						
+			Rust FlexBuffers  & 1 & 1\\						
 			\hline\end{tabular}
 	\end{adjustbox}
 \end{table}
