--- a/Paper/latex/main.tex
+++ b/Paper/latex/main.tex
@@ -14,6 +14,9 @@
 \usepackage{microtype}
 \usepackage{pgfplots} % LaTeX
 \usepgfplotslibrary{groupplots}
+\usepackage{multirow}
+\usepackage{algorithmic,multicol}
+\usepackage[plain]{algorithm}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %usepackage{pgf}
