--- a/Experiments/plot/merge_results.ipynb
+++ b/Experiments/plot/merge_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,6 +115,7 @@
     "\n",
     "                                    base = baseline.replace(\"FlatBuffersJava\", \"FlatBufJava\")                                    \n",
     "                                    if execution == \"CPU\" :\n",
+    "                                        print(f'total={list_total} cpu={list_cpu_io}  load={list_load}  ')\n",
     "                                        total = time_total - time_load \n",
     "                                        io  = time_total - time_cpu_io\n",
     "                                        cpu  = time_cpu_io - time_load\n",
@@ -140,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,11 +167,11 @@
     "    #                           f'{root_path}/read_write/Java_R3_Experiment1_LoadToMemory_times.dat',\n",
     "    #                           f'{root_path}/read_write/Rust_R13_Experiment1_LoadToMemory_times.dat']\n",
     "\n",
-    "    write_results = [f'{root_path}/results/Experiment1_Write_times.dat']\n",
+    "    write_results = [f'{root_path}/_results/Experiment1_Write_times.dat']\n",
     "\n",
-    "    read_results = [f'{root_path}/results/Experiment2_Read_times.dat']                 \n",
+    "    read_results = [f'{root_path}/_results/Experiment2_Read_times.dat']                 \n",
     "   \n",
-    "    load_to_memory_results = [f'{root_path}/results/Experiment1_LoadToMemory_times.dat']\n",
+    "    load_to_memory_results = [f'{root_path}/_results/Experiment1_LoadToMemory_times.dat']\n",
     "   \n",
     "    read_write_header = [\"baseline\",\"language\",\"taskset\",\"execution\",\"platform\",\"seq_rand\",\"nrow\",\"time\"]   \n",
     "    load_to_memory_header = [\"language\",\"platform\",\"taskset\",\"nrow\",\"time\"]\n",
@@ -183,7 +184,7 @@
     "    nrows = [5000000,4000000,3000000,2000000,1000000]\n",
     "\n",
     "    executions = [\"CPU\", \"IO\", \"Total\"]\n",
-    "    platforms  = [\"Single\" , \"Parallel\" ]\n",
+    "    platforms  = [\"Parallel\" ] #\"Single\" , \n",
     "    seq_rands  = [\"Sequential\", \"Random\"]\n",
     "    languages  = [\"Java\", \"CPP\",\"Rust\"]\n",
     "    tasksets   = [True, False]\n",
@@ -201,7 +202,6 @@
     "                                     (df_load_to_memory['nrow']==5000000)]\n",
     "    \n",
     "    list_load = np.array(df_load['time'].tolist())  \n",
-    "    print(list_load)\n",
     "    # print(df_load)                                 \n",
     "\n",
     "    #calc_read_write(header,baselines, languages, tasksets, platforms,seq_rands, nrows, df_run, df_load, execution):\n",
@@ -210,7 +210,7 @@
     "                                      seq_rands= seq_rands, nrows=nrows, df_run=df_write, df_load_to_memory= df_load_to_memory, execution=\"CPU\")\n",
     "\n",
     "                            \n",
-    "    df_write_final.to_csv(\"write2.csv\", index=False)                  \n",
+    "    df_write_final.to_csv(\"write3.csv\", index=False)                  \n",
     "  \n",
     "\n",
     "\n",
@@ -219,16 +219,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[23018 23085 23026 22854 22876 22864 22892 22856 23078 22861 23050 23058\n",
-      " 23021 22811 22919 23154 22974 22923 22863 22941 23027 23098 22994 22824\n",
-      " 22900 22856 22905 23046]\n"
+      "total=[20283 20554 20796 20236 20176] cpu=[20714 20619 20348 20413 20476]  load=[20066 20137 20343 20369 20428 20482 20461 20300 20367 20746 20520 20507\n",
+      " 20399 20119 20092 20448 20804 20221 20189 20466 20264 20396 20139 20255]  \n"
      ]
     }
    ],
